--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  width: 100%;
+  height: 100vh;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Carousel */
+.carouselComponent {
+  position: relative;
+  top: 45%;
+  opacity: 0.95;
+}
+
+.item {
+  min-height: 15rem; /* Adjust the height as per your requirement */
+  width: 100%;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.25rem;
+  pointer-events: none;
+}
+
+.inner-carousel {
+  display: flex;
+  user-select: none;
+  /* Adjust the space between carousel items by changing the gap value */
+}
+
+.carousel {
+  cursor: grab;
+  overflow: hidden;
+  user-select: none;
+}
+
+.lens {
+  position: relative;
+  bottom: 6%;
+  left: 10px;
+  height: 100%;
+  width: 100%;
 }
